# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

icutoolutil_sources = [
  "source/tools/toolutil/collationinfo.cpp",
  "source/tools/toolutil/collationinfo.h",
  "source/tools/toolutil/dbgutil.cpp",
  "source/tools/toolutil/dbgutil.h",
  "source/tools/toolutil/denseranges.cpp",
  "source/tools/toolutil/denseranges.h",
  "source/tools/toolutil/filestrm.cpp",
  "source/tools/toolutil/filestrm.h",
  "source/tools/toolutil/filetools.cpp",
  "source/tools/toolutil/filetools.h",
  "source/tools/toolutil/flagparser.cpp",
  "source/tools/toolutil/flagparser.h",
  "source/tools/toolutil/package.cpp",
  "source/tools/toolutil/package.h",
  "source/tools/toolutil/pkg_genc.cpp",
  "source/tools/toolutil/pkg_genc.h",
  "source/tools/toolutil/pkg_gencmn.cpp",
  "source/tools/toolutil/pkg_gencmn.h",
  "source/tools/toolutil/pkg_icu.cpp",
  "source/tools/toolutil/pkg_icu.h",
  "source/tools/toolutil/pkgitems.cpp",
  "source/tools/toolutil/ppucd.cpp",
  "source/tools/toolutil/ppucd.h",
  "source/tools/toolutil/swapimpl.cpp",
  "source/tools/toolutil/swapimpl.h",
  "source/tools/toolutil/toolutil.cpp",
  "source/tools/toolutil/toolutil.h",
  "source/tools/toolutil/ucbuf.cpp",
  "source/tools/toolutil/ucbuf.h",
  "source/tools/toolutil/ucln_tu.cpp",
  "source/tools/toolutil/ucln_tu.h",
  "source/tools/toolutil/ucm.cpp",
  "source/tools/toolutil/ucm.h",
  "source/tools/toolutil/ucmstate.cpp",
  "source/tools/toolutil/udbgutil.cpp",
  "source/tools/toolutil/udbgutil.h",
  "source/tools/toolutil/unewdata.cpp",
  "source/tools/toolutil/unewdata.h",
  "source/tools/toolutil/uoptions.cpp",
  "source/tools/toolutil/uoptions.h",
  "source/tools/toolutil/uparse.cpp",
  "source/tools/toolutil/uparse.h",
  "source/tools/toolutil/writesrc.cpp",
  "source/tools/toolutil/writesrc.h",
  "source/tools/toolutil/xmlparser.cpp",
  "source/tools/toolutil/xmlparser.h",
]

genbrk_sources = [
  "source/tools/genbrk/genbrk.cpp",
]

gencnval_sources = [
  "source/tools/gencnval/gencnval.c",
]

gencfu_sources = [
  "source/tools/gencfu/gencfu.cpp",
]

gendict_sources = [
  "source/tools/gendict/gendict.cpp",
]

genrb_sources = [
  "source/tools/genrb/errmsg.c",
  "source/tools/genrb/errmsg.h",
  "source/tools/genrb/genrb.cpp",
  "source/tools/genrb/parse.cpp",
  "source/tools/genrb/parse.h",
  "source/tools/genrb/prscmnts.cpp",
  "source/tools/genrb/prscmnts.h",
  "source/tools/genrb/rbutil.c",
  "source/tools/genrb/rbutil.h",
  "source/tools/genrb/read.c",
  "source/tools/genrb/read.h",
  "source/tools/genrb/reslist.cpp",
  "source/tools/genrb/reslist.h",
  "source/tools/genrb/rle.c",
  "source/tools/genrb/rle.h",
  "source/tools/genrb/ustr.c",
  "source/tools/genrb/ustr.h",
  "source/tools/genrb/wrtjava.cpp",
  "source/tools/genrb/wrtxml.cpp",
]

icupkg_sources = [
  "source/tools/icupkg/icupkg.cpp",
]

makeconv_sources = [
  "source/tools/makeconv/gencnvex.c",
  "source/tools/makeconv/genmbcs.cpp",
  "source/tools/makeconv/genmbcs.h",
  "source/tools/makeconv/makeconv.cpp",
  "source/tools/makeconv/makeconv.h",
  "source/tools/makeconv/ucnvstat.c",
]

pkgdata_sources = [
  "source/tools/pkgdata/pkgdata.cpp",
  "source/tools/pkgdata/pkgtypes.c",
  "source/tools/pkgdata/pkgtypes.h",
]

